Updated RouteActivity SavedInstance

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
-            shrinkResources false
+            shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
