--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ build/*
 google-services.json
 src/main/java/com/ropr/mcroute/configs/*.java
 *.apk
-ApiConfig.java"src\main\java\com\ropr\mcroute\configs\ApiConfig.java" 
+ApiConfig.java
+src\main\java\com\ropr\mcroute\configs\ApiConfig.java
