--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 build/*
 google-services.json
-src/main/java/com/ropr/mcroute/configs/*.java
 *.apk
-ApiConfig.java
-src\main\java\com\ropr\mcroute\configs\ApiConfig.java
+/src/main/java/com/ropr/mcroute/configs/ApiConfig.java
